@@ -13,6 +13,7 @@ Android Client
 - Option to automatically join root channel in preferences
 - Added the ability to control user's transmissions
 - Ability to play sound when voice activation is toggled
+- Ability to play sound for intercept subscription toggled
 - Ability to use Text-To-Speech to announce transmission changes
 - Ability to use Text-To-Speech to announce subscription changes
 iOS Client
